fixed footer height and content wrap padding, added margin bottom to cards on home page

--- a/src/App.css
+++ b/src/App.css
@@ -39,5 +39,5 @@ a:hover {
 }
 
 .content-wrap {
-  padding-bottom: 2.5rem;
+  padding-bottom: 5rem;
 }
