--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,4 +5,5 @@
   width: 100%;
   background-color: #32cd32;
   border-top: #848482 solid 6px;
+  height: 5rem;
 }
